<resources>
    <string name="app_name">ac_service_android_demo</string>
    <string name="xlistview_header_hint_normal">pull to refresh</string>
    <string name="xlistview_header_hint_ready">release to refresh</string>
    <string name="xlistview_header_hint_loading">loading...</string>
    <string name="xlistview_header_last_time">last refresh time:</string>
    <string name="xlistview_footer_hint_ready">release to load more</string>
    <string name="xlistview_nerver_have_a_refresh">never have a refresh</string>
    <string name="xlistview_just_a_minute">just a minute</string>
    <string name="xlistview_refreshtime_desc1">%1$dmin%2$dsec ago</string>
    <string name="xlistview_refreshtime_desc2">%1$dhour%2$s</string>
    <string name="xlistview_refreshtime_desc3">%1$dday%2$s</string>
    <string name="about_aty_abouttext">about</string>
    <string name="about_aty_ablecloud">AbleCloud</string>
    <string name="about_aty_copyright">智云奇点公司版权所有</string>
    <string name="about_aty_introduction">提供云智能引擎，快速实现大规模设备智能化\n提供大数据分析引擎，轻松实现智能硬件商业智能\n提供物联网安全引擎，快速打造顶级安全的联网硬件\n\n\n</string>
    <string name="about_aty_introduction_title">开启硬件云端智慧</string>
    <string name="add_device_aty_title">Add device</string>
    <string name="add_device_aty_hint">Start your device, then click the button</string>
    <string name="add_device_aty_wifiname">Wi-Fi Name:</string>
    <string name="add_device_aty_wifipwd">Password:</string>
    <string name="add_device_aty_wifipwd_hint">input your wifi password</string>
    <string name="add_device_aty_startlink">start link</string>
    <string name="add_device_aty_aplink"><u>Try AP Link?</u></string>
    <string name="add_device_aty_direct_bind">Direct Bind</string>
    <string name="add_device_aty_device_activate_ing">activating device, wait...</string>
    <string name="add_device_aty_re_activate">activate once again</string>
    <string name="add_device_aty_choose_device_to_bind">the devices who are activated...\nclick the device to bind</string>
    <string name="add_device_aty_device_is_bounded">the device is bounded</string>
    <string name="add_deviec_aty_input_devicename_to_bind">input device name to bind</string>
    <string name="add_device_aty_confirmbtn_text">confirm</string>
    <string name="add_device_aty_device_bind_success">device %1$d bind success</string>
    <string name="add_device_aty_bind_status_unknown">bind status unknown</string>
    <string name="add_device_aty_bind_status_bind">bound</string>
    <string name="add_device_aty_bind_status_unbind">ubind</string>
    <string name="ap_link_aty_title">AP Link</string>
    <string name="ap_link_aty_first_step">First Step</string>
    <string name="ap_link_aty_first_step_hint">Please select the device hotspot and connect</string>
    <string name="ap_link_aty_refresh">refresh</string>
    <string name="ap_link_aty_second_step">Second Step</string>
    <string name="ap_link_aty_second_step_hint">Please select the WiFi you want to configure</string>
    <string name="ap_link_aty_second_step_hint2">Please enter the WiFi password of your choice and click Start Connection</string>
    <string name="ap_link_aty_wifipwd">Password:</string>
    <string name="ap_link_aty_wifipwd_hint">Please enter a WiFi password</string>
    <string name="ap_link_aty_startlink">Start the connection</string>
    <string name="ap_link_aty_third_step">Third Step</string>
    <string name="ap_link_aty_third_step_hint">Fill in the device name and bind the device</string>
    <string name="ap_link_aty_device_name">Device name:</string>
    <string name="ap_link_aty_device_name_hint">Please give your device a name</string>
    <string name="ap_link_aty_bind_device">Bind the device</string>
    <string name="ap_link_aty_refresh_available_hotspot">Refresh hotspots available for your phone</string>
    <string name="ap_link_aty_connectbtn_pressed_toast_hint">Follow the steps to connect to the device hotspot and select the WiFi you want to configure</string>
    <string name="ap_link_aty_connectbtn_pressed_device_activate_ing">Activating device, manually switch the current hotspot to %1$s</string>
    <string name="ap_link_aty_binddevicebtn_pressed_toast_hint">Follow the steps to bind after successfully activating the device</string>
    <string name="ap_link_aty_choosetext">select</string>
    <string name="ap_link_aty_begin_autolink_hotspot">Start automatically connecting to the hotspot</string>
    <string name="ap_link_aty_autolink_hotspot_failed">Automatically connecting to this hot spot failed, please try to connect manually</string>
    <string name="ap_link_aty_no_available_hotspot">No WiFi hotspots available</string>
    <string name="ap_link_aty_get_wifilist_ing">The connection is successful and getting the list of available WiFi</string>
    <string name="ap_link_aty_to_second_step_toast_hint">Search successful, enter the second step to select the operation to be configured WiFi</string>
    <string name="ap_link_aty_device_no_wifi_hotspot_toast_hint">设备上没有可用的WiFi热点,无法进行AP配网</string>
    <string name="ap_link_aty_please_click_refreshbtn_in_second_step">There is no WiFi hotspot available on the device and can not be used for AP distribution</string>
    <string name="ap_link_aty_device_activate_success_toast_hint">Activation successful</string>
    <string name="ap_link_aty_activate_success_you_can_bind">If the device is activated successfully, bind the device</string>
    <string name="ap_link_aty_device_activate_fail_toast_hint">Configuration failed: %1$s</string>
    <string name="ap_link_aty_device_bind_success">device %1$d bind success</string>
    <string name="ap_link_aty_device_bind_fail">bind failed %1$s</string>
    <string name="bind_device_aty_title">Bind the device</string>
    <string name="bind_device_aty_hint">After the device is connected to the cloud, enter the physical ID for binding</string>
    <string name="bind_device_aty_physicalid">Physical ID:</string>
    <string name="bind_device_aty_physicalid_hint">Please enter the device physical ID</string>
    <string name="bind_device_aty_device_name">Device name:</string>
    <string name="bind_device_aty_devicename_hint">Please give your device a name</string>
    <string name="bind_device_aty_bindtext">bind</string>
    <string name="bind_device_aty_device_bind_success">device %1$d bind success</string>
    <string name="config_detail_aty_title">Configuration information</string>
    <string name="config_detail_aty_domain">Domain:</string>
    <string name="config_detail_aty_domainid">DomainId:</string>
    <string name="config_detail_aty_subdomain">subDomain:</string>
    <string name="config_detail_aty_choose_linktype">Select the equipment type</string>
    <string name="config_detail_aty_confirm">confirm</string>
    <string name="configuration_aty_title">Configuration</string>
    <string name="configuration_aty_domain">Domain:</string>
    <string name="configuration_aty_domain_hint">Please enter Domain</string>
    <string name="configuration_aty_domainid">DomainId:</string>
    <string name="configuration_aty_domainid_hint">Please enter an integer</string>
    <string name="configuration_aty_subdomain">subDomain:</string>
    <string name="configuration_aty_subdomain_hint">Please enter subDomain</string>
    <string name="configuration_aty_router">Router:</string>
    <string name="configuration_aty_router_hint">Default test.ablecloud.cn</string>
    <string name="configuration_aty_choose_communication_form">Select communication format</string>
    <string name="configuration_aty_choose_device_type">Select device type</string>
    <string name="configuration_aty_configtext">Configuration</string>
    <string name="configuration_aty_domainid_error_toast_hint">DomainId Fill in the error</string>
    <string name="configuration_aty_configsuccess">The configuration succeeds</string>
    <string name="cus_binary_aty_switch_record">Switch records</string>
    <string name="cus_binary_aty_title">Binary custom messages</string>
    <string name="cus_binary_aty_interval">Interval time, the default 5s</string>
    <string name="cus_binary_aty_start">Start</string>
    <string name="cus_binary_aty_input_msgcode">Enter the msgCode for the message to be sent</string>
    <string name="cus_binary_aty_msgcode">68</string>
    <string name="cus_binary_aty_input_payload">Enter the message to which the message was sent Payload (in hexadecimal notation)</string>
    <string name="cus_binary_aty_input_payload_hint">Such as 0123456789ABCDEF (which can be separated by spaces and commas)</string>
    <string name="cus_binary_aty_device_response_msgcode">MsgCode of the device response</string>
    <string name="cus_binary_aty_device_response_hexstr">The hexadecimal message that the device responds to</string>
    <string name="cus_binary_aty_starttext">Start</string>
    <string name="cus_binary_aty_stoptext">Stop</string>
    <string name="cus_binary_aty_please_input_valid_hexstr">Please enter a valid number</string>
    <string name="cus_binary_aty_send0">send:0</string>
    <string name="cus_binary_aty_get0">get:0</string>
    <string name="cus_json_aty_switch_record">Switch records</string>
    <string name="cus_json_aty_title">Json custom messages</string>
    <string name="cus_json_aty_msgcode">message code</string>
    <string name="cus_json_aty_all">All</string>
    <string name="cus_json_aty_send">Send</string>
    <string name="cus_json_aty_please_choose_data_package">Please select the packet (if there is no data packets, please go to the AbleCloud console to create a new packet)</string>
    <string name="cus_json_aty_send_success">send success: %1$s</string>
    <string name="cus_json_aty_please_create_data_package">Create a new packet in the console</string>
    <string name="history_record_aty_reset_wifipwd">Reset the wifi password</string>
    <string name="history_record_aty_switch_record">Switch records</string>
    <string name="history_record_aty_subscribe_success">Subscription device data was successful</string>
    <string name="history_record_aty_subscribe_fail">Subscription to device data failed</string>
    <string name="history_record_aty_open_light">Turn on</string>
    <string name="history_record_aty_close_light">Turn off</string>
    <string name="login_aty_title">Login</string>
    <string name="login_aty_domainconfig">configuration</string>
    <string name="login_aty_username">Username</string>
    <string name="login_aty_input_phone_or_email">Please enter phone number or email address</string>
    <string name="login_aty_password">Password</string>
    <string name="login_aty_input_password">Please enter a password</string>
    <string name="login_aty_newuser_sigup">New User Registration</string>
    <string name="login_aty_loginbtn">Login</string>
    <string name="login_aty_username_or_pwd_cannot_be_empty">The user name or password can not be empty</string>
    <string name="register_aty_title">Sign up</string>
    <string name="register_aty_phonenumber">phone number</string>
    <string name="register_aty_input_phonenumber">please enter phone number</string>
    <string name="register_aty_email">email</string>
    <string name="register_aty_input_email">please enter email</string>
    <string name="register_aty_username">username</string>
    <string name="register_aty_input_username">please enter username</string>
    <string name="register_aty_password">password</string>
    <string name="register_aty_input_password">please enter password</string>
    <string name="register_aty_repeat_pwd">confirm password</string>
    <string name="register_aty_input_pwd_again">please enter password once again</string>
    <string name="register_aty_vercode">verifyCode</string>
    <string name="register_aty_vercode_hint">please enter verifyCode</string>
    <string name="register_aty_fetch_vercode">fetch verifyCode</string>
    <string name="register_aty_register">Register</string>
</resources>