<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_back"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/nav_btn_back"
            android:contentDescription="@string/app_name"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/register_aty_title"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/register_text_tel"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/register_aty_phonenumber"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/register_edit_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/register_text_tel"
            android:layout_centerVertical="true"
            android:hint="@string/register_aty_input_phonenumber"
            android:inputType="phone"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/register_text_email"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/register_aty_email"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/register_edit_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/register_text_email"
            android:layout_centerVertical="true"
            android:hint="@string/register_aty_input_email"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/register_text_name"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/register_aty_username"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/register_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/register_text_name"
            android:layout_centerVertical="true"
            android:hint="@string/register_aty_input_username"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/register_text_pwd"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/register_aty_password"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/register_edit_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/register_text_pwd"
            android:layout_centerVertical="true"
            android:hint="@string/register_aty_input_password"
            android:password="true"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/register_text_repwd"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/register_aty_repeat_pwd"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/register_edit_repwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/register_text_repwd"
            android:layout_centerVertical="true"
            android:hint="@string/register_aty_input_pwd_again"
            android:password="true"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/register_text_vcode"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/register_aty_vercode"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/register_edit_vcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/register_text_vcode"
            android:layout_centerVertical="true"
            android:hint="@string/register_aty_vercode_hint"
            android:background="@color/transparent"
            android:textSize="17sp" />

        <Button
            android:id="@+id/register_vcode"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="16dp"
            android:text="@string/register_aty_fetch_vercode"
            android:textColor="@color/white"
            android:background="@drawable/selectors_btn_button" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selectors_btn_button"
        android:text="@string/register_aty_register" />
</LinearLayout>

