<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/login_aty_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/login_text_tel"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/login_aty_username"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/login_edit_tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_text_tel"
            android:layout_centerVertical="true"
            android:hint="@string/login_aty_input_phone_or_email"
            android:background="@color/transparent"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ@."
            android:inputType="number"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/login_text_pwd"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/login_aty_password"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/login_text_pwd"
            android:layout_centerVertical="true"
            android:hint="@string/login_aty_input_password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/theme"
            android:textSize="15sp"
            android:layout_marginRight="15dp"
            android:text="@string/login_aty_newuser_sigup" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selectors_btn_button"
        android:text="@string/login_aty_loginbtn" />
</LinearLayout>

