<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_device_back"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:background="@drawable/nav_btn_back"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/add_device_aty_title"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:text="@string/add_device_aty_hint" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/add_text_wifi_name"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/add_device_aty_wifiname"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/theme" />

        <TextView
            android:id="@+id/add_text_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/add_text_wifi_name"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/add_text_pwd"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:text="@string/add_device_aty_wifipwd"
            android:textColor="@color/theme"
            android:layout_marginLeft="15dp"
            android:gravity="center_vertical"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/add_edit_pwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/add_text_pwd"
            android:layout_centerVertical="true"
            android:hint="@string/add_device_aty_wifipwd_hint"
            android:textColor="@color/black"
            android:password="true"
            android:fontFamily="sans-serif"
            android:background="@color/transparent"
            android:textSize="17sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/connect"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/selectors_btn_button"
        android:text="@string/add_device_aty_startlink" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/ap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/add_device_aty_aplink"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_device_aty_direct_bind"
            android:textColor="@color/grey"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>